--- a/_posts/2016-04-14-ffmpeg.md
+++ b/_posts/2016-04-14-ffmpeg.md
@@ -5,11 +5,38 @@ date: 2016-04-12 09:09:06 -0700
 comments: false
 ---
 Creating a Time Lapse with Jpeg Photo
+
 ```
 ffmpeg -i '%*.JPG' -r 30 -q:v 2 timelapse.mp4
 ```
 
 For iMovie
+
 ```
 ffmpeg -i '%*.JPG' -r 30 -q:v 2 -pix_fmt yuv420p  timelapse.mp4
 ```
+
+Merge videos into one
+
+```
+cat list.txt
+
+file 'GOPR4922.MP4'
+file 'GP014922.MP4'
+file 'GP024922.MP4'
+
+ffmpeg -f concat -i list.txt -c copy merged.mp4
+```
+
+Speedup video by X4
+
+```
+ffmpeg -i input.mp4 -strict -2 -vf "setpts=0.25*PTS" outputX4.mp4
+```
+
+Select a section from a video (minutes 26-32:10)
+
+```
+ffmpeg -i merged.mp4 -ss 00:26:00 -to 00:32:10 -c:v copy -c:a copy part2.mp4
+```
+
