--- a/_posts/2016-05-10-irssi.md
+++ b/_posts/2016-05-10-irssi.md
@@ -4,4 +4,14 @@ title: "Irssi Setup"
 date: 2016-05-10 10:10:06 -0700
 comments: false
 ---
+Default Config
+```
+```
 
+Scripts
+
+- crapbuster.pl
+
+-
+
+-
