chore app post finished

--- a/_posts/2016-05-12-ChoreApp.md
+++ b/_posts/2016-05-12-ChoreApp.md
@@ -171,3 +171,6 @@ Time to build the App
 python setup.py py2app
 ```
 
+Run ChoreApp
+------
+Place the ChoreApp file created in the above command with the chores.txt file and residents.txt file in the same directory. Then click on the ChoreApp to generate the output file assigning chores to residents.
