finish windows ansible article

--- a/_posts/2016-04-14-ffmpeg.md
+++ b/_posts/2016-04-14-ffmpeg.md
@@ -42,6 +42,6 @@ ffmpeg -i merged.mp4 -ss 00:26:00 -to 00:32:10 -c:v copy -c:a copy part2.mp4
 
 Merge MTS files from a video camera 
 ```
-fmpeg -i "concat:00000.MTS|00001.MTS|00002.MTS|00003.MTS|00004.MTS|00005.MTS|00006.MTS" output.mp4
+ffmpeg -i "concat:00000.MTS|00001.MTS|00002.MTS|00003.MTS|00004.MTS|00005.MTS|00006.MTS" output.mp4
 ```
 
