adding in superser service script

--- a/_posts/2022-10-01-superset.md
+++ b/_posts/2022-10-01-superset.md
@@ -42,7 +42,7 @@ FLASK_APP=superset /home/ubuntu/.local/bin/superset init
 Starting the application 
 
 ```
-#enable the python venv
+#enable the python virtual environment
 source super/bin/active	 
 export FLASK_APP=superset
 superset init
